# webapp

./: .gitignore  Cargo.toml  README.md  format_view.sh
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  index.html  tailwind.config.js
client/src/: error.rs  lib.rs  main.rs
client/src/components/: error_alert.rs  login_form.rs
client/src/pages/: login.rs  mod.rs
client/style/: globals.css  tailwind.css
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: login_form.rs
frontend/src/pages/: login.rs  mod.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
