[package]
name = "client"
version = "0.1.0"
edition = "2021"


[dependencies]
# -- UI
leptos = { version = "0.6.12", features = ["csr"] }
leptos_meta = { version = "0.6.12", default-features = false }
leptos_router = { version = "0.6.12", features = ["csr"] }
# -- WASM
console_error_panic_hook = "0.1.7"
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }


[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.86"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.69"
