[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App (HTML)
app = { path = "../app" }
# -- Leptos
leptos = "0.6.12"
leptos_axum = "0.6.12"
# -- Async
tokio = { version = "1.38.0", features = ["full"] }
# -- Web
axum = { version = "0.7.5", features = ["macros"] }
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }

[lints]
workspace = true
